<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbarlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/toolbarLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="@color/colorPrimary"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed">

            <ImageView
                android:id="@+id/activity_main_title_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop" />

            <LinearLayout
                android:layout_width="120dp"
                android:layout_height="160dp"
                android:layout_gravity="right"
                android:layout_marginTop="80dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/main_activity_calendar_shape"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/activity_main_yearmonthTV"
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:background="@drawable/calenda_title_shape"
                    android:gravity="center"
                    android:text="2019年3月"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/activity_main_dayTV"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="23"
                    android:textSize="48sp" />

                <TextView
                    android:id="@+id/activity_main_weekTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:text="星期一"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/activity_main_nongliTV"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_margin="8dp"
                    android:layout_weight="0.3"
                    android:gravity="center"
                    android:text="XX（猪）年 二月十二"
                    android:textColor="@android:color/white"
                    android:textSize="9sp" />
            </LinearLayout>

            <Button
                android:id="@+id/main_activity_title_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginBottom="72dp"
                android:background="@color/half_translate"
                android:text="开始使用"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/main_activity_versionTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:background="@color/half_translate"
                android:gravity="end"
                android:text="Version:2.0.1"
                android:textColor="@android:color/white"
                android:textSize="10sp" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/actionBarSize"
                android:layout_marginTop="20dp"
                android:theme="@android:style/ThemeOverlay.Material.Dark.ActionBar"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ToolbarPopmenuStyle" />
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="24dp"
                android:background="@drawable/main_activity_calendar_shape"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:background="@drawable/today_schedule_title_shape"
                    android:gravity="center"
                    android:text="今日排班"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />

                <android.support.v7.widget.RecyclerView
                    android:layout_margin="8dp"
                    android:id="@+id/activity_main_recyclerview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                style="@style/main_button_group_shape"
                android:layout_marginTop="48dp">
                <Button
                    android:layout_marginRight="8dp"
                    android:id="@+id/schedule_activity"
                    style="@style/main_button_style"
                    android:drawableLeft="@drawable/schedule_show"
                    android:text="@string/schedule" />
                <Button
                    android:id="@+id/schedule_input_activity"
                    style="@style/main_button_style"
                    android:drawableLeft="@drawable/schedule_input"
                    android:text="开始排班" />
            </LinearLayout>
            <LinearLayout
                style="@style/main_button_group_shape"
                android:layout_marginTop="16dp">

                <Button
                    android:layout_marginRight="8dp"
                    android:id="@+id/count_shift_list"
                    style="@style/main_button_style"
                    android:drawableLeft="@drawable/money2"
                    android:text="加班费" />

                <Button
                    android:id="@+id/count_shift"
                    style="@style/main_button_style"
                    android:drawableLeft="@drawable/count_shift"
                    android:text="统计加班" />
            </LinearLayout>
            <LinearLayout
                style="@style/main_button_group_shape"
                android:layout_marginTop="16dp">
                <Button
                    android:layout_marginRight="8dp"
                    android:id="@+id/JXGZ"
                    style="@style/main_button_style"
                    android:drawableLeft="@drawable/money1"
                    android:text="绩效工资" />
                <Button
                    android:id="@+id/JXGZ_cal"
                    style="@style/main_button_style"
                    android:drawableLeft="@drawable/ico_calprp"
                    android:text="计算绩效" />
            </LinearLayout>
            <LinearLayout
                style="@style/main_button_group_shape"
                android:layout_marginTop="16dp">

                <Button
                    android:layout_marginRight="8dp"
                    android:id="@+id/person_manage"
                    style="@style/main_button_style"
                    android:drawableLeft="@drawable/person_manage"
                    android:text="@string/person_manage" />

                <Button
                    android:id="@+id/shift_manage"
                    style="@style/main_button_style"
                    android:drawableLeft="@drawable/shift"
                    android:text="@string/shift_manage" />


            </LinearLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>