<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScheduleInputEditActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:id="@+id/activity_schedule_input_edit_appbar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="56dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="60dp"
                    android:orientation="horizontal">
                    <Button
                        android:id="@+id/schedule_inputedit_activity_save"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="4dp"
                        android:drawableLeft="@drawable/ic_save_white_24dp"
                        style="@style/ScheduleInputEditButtonStyle"
                        android:text="@string/save" />
                    <Button
                        android:id="@+id/schedule_inputedit_activity_cancel"
                        android:layout_marginRight="16dp"
                        android:drawableLeft="@drawable/ic_cancel_white_24dp"
                        style="@style/ScheduleInputEditButtonStyle"
                        android:text="@string/cancel" />
                    <Button
                        android:id="@+id/schedule_inputedit_activity_selectdate"
                        android:layout_marginRight="4dp"
                        android:drawableLeft="@drawable/ic_date_range_white_24dp"
                        style="@style/ScheduleInputEditButtonStyle"
                        android:text="日期" />
                    <Button
                        android:id="@+id/schedule_inputedit_activity_template"
                        android:layout_marginRight="16dp"
                        android:drawableLeft="@drawable/ic_list_white_24dp"
                        style="@style/ScheduleInputEditButtonStyle"
                        android:text="@string/template" />
                    <Button
                        android:id="@+id/schedule_inputedit_activity_setup"
                        android:layout_marginRight="16dp"
                        android:drawableLeft="@drawable/ic_settings_white_24dp"
                        style="@style/ScheduleInputEditButtonStyle"
                        android:text="@string/setup" />
                    <CheckBox
                        style="@style/CustomCheckboxTheme"
                        android:textColor="@android:color/white"
                        android:textSize="12sp"
                        android:text="显示农历"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/schedule_inputedit_activity_showNongLiCheckBox"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:paddingBottom="1dp"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_gravity="bottom"
                android:orientation="horizontal"
                app:layout_collapseMode="pin">

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/schedule_item_rowNumberTV"
                    android:background="@android:color/white"
                    android:gravity="center"
                    android:text="行号"
                    android:layout_marginRight="1dp"
                    android:layout_width="20dp"
                    android:layout_height="match_parent"
                    app:autoSizeTextType="uniform"
                    app:autoSizeMinTextSize="6sp"
                    app:autoSizeMaxTextSize="12sp"
                    />
                <TextView
                    android:id="@+id/schedule_item_title_nameTV"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="1dp"
                    android:layout_weight="1.5"
                    android:background="@android:color/white"
                    android:gravity="center"
                    android:text="姓名" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="1dp"
                    android:layout_weight="1"
                    android:background="@android:color/white"
                    android:orientation="vertical">

                    <android.support.v7.widget.AppCompatTextView
                        android:textSize="12sp"
                        app:autoSizeTextType="uniform"
                        app:autoSizeMinTextSize="8sp"
                        app:autoSizeMaxTextSize="12sp"
                        android:id="@+id/schedule_item_title_date1"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:gravity="center" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="1dp"
                        android:gravity="center"
                        android:text="星期一" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="1dp"
                    android:layout_weight="1"
                    android:background="@android:color/white"
                    android:orientation="vertical">

                    <android.support.v7.widget.AppCompatTextView
                        android:textSize="12sp"
                        app:autoSizeTextType="uniform"
                        app:autoSizeMinTextSize="8sp"
                        app:autoSizeMaxTextSize="12sp"
                        android:id="@+id/schedule_item_title_date2"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:gravity="center" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="1dp"
                        android:gravity="center"
                        android:text="星期二" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="1dp"
                    android:layout_weight="1"
                    android:background="@android:color/white"
                    android:orientation="vertical">

                    <android.support.v7.widget.AppCompatTextView
                        android:textSize="12sp"
                        app:autoSizeTextType="uniform"
                        app:autoSizeMinTextSize="8sp"
                        app:autoSizeMaxTextSize="12sp"
                        android:id="@+id/schedule_item_title_date3"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:gravity="center" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="1dp"
                        android:gravity="center"
                        android:text="星期三" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="1dp"
                    android:layout_weight="1"
                    android:background="@android:color/white"
                    android:orientation="vertical">

                    <android.support.v7.widget.AppCompatTextView
                        android:textSize="12sp"
                        app:autoSizeTextType="uniform"
                        app:autoSizeMinTextSize="8sp"
                        app:autoSizeMaxTextSize="12sp"
                        android:id="@+id/schedule_item_title_date4"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:gravity="center" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="1dp"
                        android:gravity="center"
                        android:text="星期四" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="1dp"
                    android:layout_weight="1"
                    android:background="@android:color/white"
                    android:orientation="vertical">

                    <android.support.v7.widget.AppCompatTextView
                        android:textSize="12sp"
                        app:autoSizeTextType="uniform"
                        app:autoSizeMinTextSize="8sp"
                        app:autoSizeMaxTextSize="12sp"
                        android:id="@+id/schedule_item_title_date5"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:gravity="center" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="1dp"
                        android:gravity="center"
                        android:text="星期五" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="1dp"
                    android:layout_weight="1"
                    android:background="@android:color/white"
                    android:orientation="vertical">

                    <android.support.v7.widget.AppCompatTextView
                        android:textSize="12sp"
                        app:autoSizeTextType="uniform"
                        app:autoSizeMinTextSize="8sp"
                        app:autoSizeMaxTextSize="12sp"
                        android:id="@+id/schedule_item_title_date6"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:gravity="center" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="1dp"
                        android:gravity="center"
                        android:textColor="@android:color/holo_green_dark"
                        android:text="星期六" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="1dp"
                    android:layout_weight="1"
                    android:background="@android:color/white"
                    android:orientation="vertical">

                    <android.support.v7.widget.AppCompatTextView
                        android:textSize="12sp"
                        app:autoSizeTextType="uniform"
                        app:autoSizeMinTextSize="8sp"
                        app:autoSizeMaxTextSize="12sp"
                        android:id="@+id/schedule_item_title_date7"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:gravity="center" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="1dp"
                        android:gravity="center"
                        android:textColor="@android:color/holo_red_light"
                        android:text="星期日" />
                </LinearLayout>

                <TextView
                    android:id="@+id/schedule_item_title_noteTV"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:background="@android:color/white"
                    android:gravity="center"
                    android:text="备注" />
            </LinearLayout>

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">
    <android.support.v7.widget.RecyclerView
        android:id="@+id/schedule_inputedit_activity_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbarSize="2dp"
        android:scrollbars="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimary"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal">
        <android.support.v7.widget.AppCompatTextView
            android:textSize="12sp"
            app:autoSizeTextType="uniform"
            app:autoSizeMinTextSize="8sp"
            app:autoSizeMaxTextSize="12sp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:background="@color/scheduleItemTextViewBG"
            android:layout_width="64dp"
            android:layout_height="match_parent"
            android:id="@+id/schedule_inputedit_activity_bottomTV"
            android:gravity="center"
            android:text=""/>
        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbarSize="1dp"
            android:scrollbars="horizontal"
            android:fadeScrollbars="false"
            android:scrollbarStyle="outsideInset"
            android:id="@+id/schedule_inputedit_activity_recyclerview2"/>
    </LinearLayout>
</LinearLayout>

</android.support.design.widget.CoordinatorLayout>